--- a/src/pages/User/Order/order.scss
+++ b/src/pages/User/Order/order.scss
@@ -2,9 +2,19 @@
     max-width: 80px;
 }
 
+.order__id__prd{
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    word-break: break-word;
+    color: #333;
+}
+
 .default__column__filter{
     min-width: 100px;
-    width: 100%;
+    // width: 100%;
 }
 .number__range__column__filter{}
 .select__column__filter{}
