--- a/src/pages/User/Order/Table/index.scss
+++ b/src/pages/User/Order/Table/index.scss
@@ -1,5 +1,6 @@
 .table__order {
-  width: 100%;
+  // width: 100%;
+  min-width: 100px;
   border-spacing: 0;
   border: 1px solid black;
   padding: 1rem;
@@ -16,6 +17,7 @@
     padding: 0.5rem;
     border-bottom: 1px solid black;
     border-right: 1px solid black;
+    min-width: 100px;
     :last-child {
       border-right: 0;
     }
@@ -27,11 +29,12 @@
         padding: 50px 0 5px 0;
         padding-top: 30px;
         p {
+          display: block;
           position: absolute;
           top: 0;
           left: 0;
           font-size: large;
-          margin: 0;
+          margin: 0  auto;
         }
         div {
           display: flex;
@@ -40,12 +43,11 @@
         }
       }
     }
+    
   }
-
   tbody {
     td {
       min-width: 50px;
-      width: fit-content;
       div {
         .bill__product {
           display: flex;
@@ -65,4 +67,25 @@
 }
 .asc {
   border-bottom: 5px solid rgb(160, 21, 11);
+}
+
+.pagination__wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 20px;
+  gap: 5%;
+  .select__page__size{
+    display: flex;
+    align-items: center;
+    label{
+      width: auto;
+      display: flex;
+      align-items: center;
+      margin: 0;
+    }
+    select{
+      width: fit-content;
+    }
+  }
 }
