--- a/src/pages/Category/index.scss
+++ b/src/pages/Category/index.scss
@@ -1,7 +1,7 @@
 // @import "../../style/index.scss";
 
 .category_wrapper {
-  display: flex;
+  // display: flex;
   width: 1140px;
   margin: 0 auto;
 
