--- a/src/components/Menu/Menu.scss
+++ b/src/components/Menu/Menu.scss
@@ -14,6 +14,7 @@
     display: flex;
     align-items: center;
     display: flex;
+
     .menu_nav_item {
       cursor: pointer;
       line-height: 46px;
@@ -22,6 +23,8 @@
       justify-content: center;
       align-items: center;
       position: relative;
+      z-index: 999;
+
       &:hover {
         background-color: rgba(255, 255, 255, 0.2);
         color: #fff;
@@ -29,7 +32,7 @@
       &:hover .menu_subnav {
         display: block;
       }
-      a{
+      a {
         color: #333;
       }
     }
@@ -43,10 +46,11 @@
     height: auto;
     top: 100%;
     background-color: #fff;
+    z-index: 999;
     .menu_subnav_item {
       margin: 0 20px;
       display: block;
-      a{
+      a {
         color: #333;
       }
     }
